stylesheet.css
body {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    min-height: 100vh;
    margin: 0;
    padding: 0;
    background-color: #1B1B1B;
    font-family: Tahoma, Verdana, Arial, serif;
    color: white;
}

.die {
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: grab;
    font-size: 0;
    width: 100px;
    height: 150px;
    z-index: 1;
}

.screen {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
    margin-top: -25px;
}

.diceContainer {
    display: flex;
    justify-content: center;
    gap: 50px;
}

button {
    height: 100px;
    width: 200px;
    font-size:50px;
    border-radius: 32px;
    border-color: white;
    background-color: mediumseagreen;
    color: white;
}

h2 {
    font-weight: normal;
    color: white;
}

img {
    width:90%;
    height:auto;
}

#rulesButton {
    transform: translate(350px, -150px);
    display: flex;
    position:absolute;
    align-items: center;
    justify-content: center;
}

#rulesDisplay {
    display: none;
    position:absolute;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    height:650px;
    width:450px;
    background-color: #1B1B1B;
    border-radius: 20px;
    border: 4px solid white;
    text-align: center;
}

#resultScreen {
    display: none;
    flex-direction: column;
    align-items: center;
    gap: 20px;
    margin-top: -25px;
}

#resultNavigationButtons {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 20px;
    margin-top: -25px;
}

